refactor(core): harden physics runtime api boundaries